Continued learning cocotb

--- a/Cocotb/SpiToAxi/Makefile
+++ b/Cocotb/SpiToAxi/Makefile
@@ -2,7 +2,8 @@
 
 # defaults
 SIM ?= verilator
-TOPLEVEL_LANG ?= systemverilog
+
+TOPLEVEL_LANG ?= verilog
 
 VERILOG_SOURCES += $(PWD)/spi2axi.sv
 # use VHDL_SOURCES for VHDL files
@@ -12,6 +13,8 @@ TOPLEVEL = spi2axi
 
 # MODULE is the basename of the Python test file
 MODULE = tb
+
+EXTRA_ARGS += --trace  # Enable FST dump for GTKWave
 
 # include cocotb's make rules to take care of the simulator setup
 include $(shell cocotb-config --makefiles)/Makefile.sim
